--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.lzy.net:okgo:2.1.4'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.1'
+    compile project(':loadingdialog')
 }
