--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':convenientbanner', ':baseadapter', ':FlycoTabLayout_Lib', ':pop', ':pager-bottom-tab-strip'
+include ':app', ':convenientbanner', ':baseadapter', ':FlycoTabLayout_Lib', ':pop', ':pager-bottom-tab-strip', ':loadingdialog'
