--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,9 @@ android:
     - extra-android-support
 script:
   - ./gradlew assembleRelease
+deploy:
+  provider: releases
+  file: "FILE TO UPLOAD"
+  skip_cleanup: true
+  on:
+    tags: true
