--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ android:
 script:
   - curl https://dl.google.com/android/repository/android-ndk-r14b-linux-x86_64.zip -O > /dev/null
   - unzip android-ndk-r14b-linux-x86_64.zip > /dev/null
-  - yes | ~/android/sdk/tools/bin/sdkmanager 'ndk-bundle'
-  - echo y | sdkmanager 'ndk-bundle'
+  - yes | sdkmanager 'ndk-bundle'
   - chmod +x ./gradlew
   - ./gradlew assembleRelease
 deploy:
